# complementary-learning-systems

./: :q  README.md  jupyter.out  launch_jupyter.sh  pyproject.toml  train.py  train.sh  train_action_classifier.py  train_old.py
.ipynb_checkpoints/: environment-checkpoint.py  train-checkpoint.py
cls/: __init__.py  models.py  types.py
cls.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cls/envs/: __init__.py  environments.py
cls/utils/: GridUtils.py  __init__.py
notebooks/: jupyter.out  launch_jupyter.sh  testing_abbott.ipynb  testing_dist_encoder.ipynb  testing_dist_encoder.py  testing_gridfield.ipynb  testing_vectorhash.ipynb  trajectories.ipynb
slurm_outputs/: output_43900866.txt  output_43900867.txt  output_43900868.txt  output_43900869.txt  output_43900870.txt  output_43900873.txt  output_43900874.txt  output_43900879.txt  output_43902484.txt  output_43902485.txt  output_43902490.txt  output_43902493.txt  output_43902494.txt  output_43902496.txt  output_43902515.txt  output_43902748.txt  output_43902789.txt  output_43902844.txt  output_43902845.txt  output_43903208.txt  output_43903378.txt  output_43903445.txt  output_43903514.txt  output_43903740.txt  output_43903760.txt  output_43903799.txt  output_43903981.txt  output_43904068.txt  output_43904103.txt  output_43904104.txt  output_43904203.txt  output_43904333.txt  output_43909035.txt  output_43909068.txt  output_43909130.txt  output_43909226.txt  output_43909317.txt  output_43909334.txt  output_43911966.txt
tests/: test_preconv_codebook.py  test_vectorized_generate.py
wandb/: latest-run
(+203 files in other folders)
