[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cls"
version = "0.1.0"
description = "Navigation environments for agent trajectories on a square grid."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Project Authors" }]
license = { text = "MIT" }

[project.optional-dependencies]
viz = [
  "numpy>=1.20",
  "matplotlib>=3.4",
]
train = [
  "torch>=2.0",
  "numpy>=1.20",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cls*"]
exclude = ["notebooks*", "tests*", "examples*"]


